# Modern-Computational-Nonlinear-Filtering

./: .gitignore  CMakeLists.txt  COMPARISON_RESULTS.md  DEVELOPMENT_NOTES.md  FINAL_AUDIT_SUMMARY.md  README.md  SRUKF_STATUS.md  requirements.txt
.github/workflows/: ci.yml
.gpd/research-map/: CONCERNS.md  REFERENCES.md  STRUCTURE.md
AircraftNav/: CMakeLists.txt
AircraftNav/include/: AircraftAntennaModel.h  AircraftDynamicsModel.h  AircraftNavSRUKF.h  AircraftNavSimulation.h  AircraftNavStateSpaceModel.h  DrydenTurbulenceModel.h  INSErrorModel.h  MonteCarloRunner.h
AircraftNav/src/: aircraft_nav_simulation.cpp  monte_carlo_analysis.cpp
AircraftNav/tests/: test_aircraft_dynamics.cpp  test_convergence.cpp  test_ins_error.cpp  test_monte_carlo.cpp
Benchmarks/: CMakeLists.txt  README.md
Benchmarks/include/: BenchmarkProblems.h  BenchmarkRunner.h
Benchmarks/src/: run_benchmarks.cpp
Common/include/: FileUtils.h  FilterMath.h  FilterMathGPU.h  StateSpaceModel.h  SystemModel.h
EKF/: CMakeLists.txt  EKF.md  main.cpp  main_ukf.cpp
EKF/include/: BallTossModel.h  EKF.h  EKFFixedLag.h  FixedLagSmoother.h  NonlinearOscillator.h  UKF.h  UnscentedFixedLagSmoother.h
EKF/scripts/: plot_results.py
EKF/src/: EKF.cpp  EKFFixedLag.cpp  FixedLagSmoother.cpp  UnscentedFixedLagSmoother.cpp
Iridium/: CMakeLists.txt  iridium_tracking_complete.cpp
PKF/: CMakeLists.txt
PKF/include/: lorenz63_model.hpp  noise_models.hpp  particle_filter.hpp  particle_filter_gpu.hpp  particle_fixed_lag.hpp  resampling.hpp  state_space_model.hpp
PKF/src/: example_main.cpp
PKF/tests/: test_bearing_only.cpp  test_particle.cpp
RBPKF/: CMakeLists.txt
RBPKF/examples/: example_rbpf_ctrv.cpp
RBPKF/include/rbpf/: kalman_filter.hpp  rbpf_config.hpp  rbpf_core.hpp  resampling.hpp  state_space_models.hpp  types.hpp
RBPKF/src/: resampling.cpp
RBPKF/tests/: test_rbpf_basic.cpp
UKF/: CMakeLists.txt  main.cpp  main_srukf.cpp
UKF/include/: DragBallModel.h  SRUKF.h  SRUKFFixedLagSmoother.h  SigmaPoints.h  UKF.h  UnscentedFixedLagSmoother.h
UKF/src/: UKF.cpp
UKF/tests/: test_srukf_angular_wrap.cpp  test_srukf_smoother.cpp
include/optmath/: ukf_aoa_tracking.hpp
iridium_tracking_package/: README.txt  examples_CMakeLists_additions.patch  tests_CMakeLists_additions.patch
iridium_tracking_package/examples/: compare_aoa_doppler.cpp  iridium_aoa_tracking.cpp
iridium_tracking_package/include/optmath/: iridium_burst_demodulator.hpp  multi_satellite_tracker.hpp  ukf_aoa_doppler_tracking.hpp
iridium_tracking_package/tests/: test_ukf_aoa.cpp
scripts/: pkf_plot_results.py  plot_benchmarks.py  plot_optimized.py  plot_results.py  simple_plot_benchmarks.py  ukf_plot_results.py
